--- a/license-server/package.json
+++ b/license-server/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "wrangler": "^4.53.0"
+    "@freemius/sdk": "^0.1.0",
+    "wrangler": "^4.53.0",
+    "zod": "^4.2.1"
   }
 }
