--- a/license-server/wrangler.toml
+++ b/license-server/wrangler.toml
@@ -1,6 +1,7 @@
 name = "cloudslash-license-server"
 main = "src/index.js"
-compatibility_date = "2023-10-30"
+compatibility_date = "2024-09-23"
+compatibility_flags = [ "nodejs_compat" ]
 
 # KV Namespace Binding (You must create this in Cloudflare dashboard)
 [[kv_namespaces]]
@@ -12,6 +13,7 @@ id = "e0f419014671448f929ca73d78a62349"
 PRODUCT_ID = "22411"
 FREEMIUS_ID = "22411"
 FREEMIUS_PUBLIC_KEY = "pk_fe7225bdb16e44cd1d9495f1be97c"
+FREEMIUS_API_KEY = "802fd6747b0a720e5865b9bccf675c4f"
 # Secrets (Set via `npx wrangler secret put ...`):
 # - FREEMIUS_SECRET_KEY
 
