--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Release
 
 on:
   push:
+    branches:
+      - "v1.2-beta"
     tags:
       - "v*"
 
@@ -38,7 +40,8 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ startsWith(github.ref, 'refs/tags/') && github.ref_name || 'beta-build' }}
+          prerelease: ${{ !startsWith(github.ref, 'refs/tags/') }}
           files: dist/*
           generate_release_notes: true
           draft: false
-          prerelease: false
