--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -2,9 +2,9 @@ name: CloudSlash Verification
 
 on:
   push:
-    branches: [main]
+    branches: [main, v1.2-beta]
   pull_request:
-    branches: [main]
+    branches: [main, v1.2-beta]
   workflow_dispatch:
 
 jobs:
