--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -3,8 +3,12 @@ name: CloudSlash Verification
 on:
   push:
     branches: [main, v1.2-beta]
+    paths-ignore:
+      - "**.md"
   pull_request:
     branches: [main, v1.2-beta]
+    paths-ignore:
+      - "**.md"
   workflow_dispatch:
 
 jobs:
